--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
   <title>Lab Edu Handout Viewer</title>
   <link rel="stylesheet" href="style.css">
   <!-- Thư viện PDF.js -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/4.2.67/pdf.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/4.2.67/pdf.worker.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js?v=1"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.worker.min.js"></script>
 <script>
-  // Khai báo đường dẫn worker để tránh lỗi blank
+  // bắt buộc: chỉ ra worker
+  window.pdfjsLib = window.pdfjsLib || {};
   pdfjsLib.GlobalWorkerOptions.workerSrc =
-    "https://cdnjs.cloudflare.com/ajax/libs/pdf.js/4.2.67/pdf.worker.min.js";
+    "https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.worker.min.js";
 </script>
 </head>
 <body>
