--- a/index.html
+++ b/index.html
@@ -13,21 +13,25 @@
   pdfjsLib.GlobalWorkerOptions.workerSrc =
     "https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.worker.min.js";
 </script>
+<!-- StPageFlip (CSS + JS) -->
+<link rel="stylesheet" href="https://unpkg.com/page-flip/dist/css/page-flip.css" />
+<script src="https://unpkg.com/page-flip/dist/js/page-flip.browser.min.js"></script>
 </head>
 <body>
-  <header>
-    <h1>Lab Edu Handout Viewer</h1>
-  </header>
+  <header><h1>Lab Edu Handout Viewer</h1></header>
+<main>
+  <div class="toolbar">
+    <button id="prev">← Trang trước</button>
+    <button id="next">Trang sau →</button>
+    <span id="page-info">Trang 1 / ?</span>
+    <label style="margin-left:12px">Zoom
+      <input id="zoom" type="range" min="1" max="2" step="0.05" value="1">
+    </label>
+  </div>
 
-  <main>
-    <div class="toolbar">
-      <button id="prev">← Trang trước</button>
-      <button id="next">Trang sau →</button>
-      <span id="page-info">Trang 1 / ?</span>
-    </div>
-    <div id="viewer"></div>
-  </main>
-
-  <script src="script.js"></script>
+  <!-- flipbook container -->
+  <div id="flipbook" style="height:72vh;"></div>
+</main>
+<script src="script.js"></script>
 </body>
 </html>
