--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
   </script>
 
   <!-- StPageFlip -->
-  <link rel="stylesheet" href="https://unpkg.com/page-flip/dist/css/page-flip.css" />
-  <script src="https://unpkg.com/page-flip/dist/js/page-flip.browser.min.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/page-flip@2.0.7/dist/css/page-flip.css">
+<script src="https://cdn.jsdelivr.net/npm/page-flip@2.0.7/dist/js/page-flip.browser.min.js"></script>
+
 </head>
 <body>
   <header><h1>Lab Edu Handout Viewer</h1></header>
