--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
 
     <!-- flipbook container -->
-    <div id="flipbook" style="height:72vh;"></div>
+    <div id="flipbook"></div>
   </main>
 
   <!-- Code của bạn -->
