--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Lab Edu Handout Viewer</title>
   <link rel="stylesheet" href="style.css">
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js?v=1"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.worker.min.js"></script>
   <script>
     window.pdfjsLib = window.pdfjsLib || {};
@@ -15,24 +15,39 @@
   </script>
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/page-flip@2.0.7/dist/css/page-flip.css">
-<script src="https://cdn.jsdelivr.net/npm/page-flip@2.0.7/dist/js/page-flip.browser.min.js"></script>
-
+  <script src="https://cdn.jsdelivr.net/npm/page-flip@2.0.7/dist/js/page-flip.browser.min.js"></script>
 </head>
 <body>
   <header><h1>Lab Edu Handout Viewer</h1></header>
 
-  <main>
-    <div class="toolbar">
-      <button id="prev">← Trang trước</button>
-      <button id="next">Trang sau →</button>
-      <span id="page-info">Trang 1 / ?</span>
-      <label style="margin-left:12px">Zoom
-        <input id="zoom" type="range" min="1" max="2" step="0.05" value="1">
-      </label>
-    </div>
+  <div class="app-container">
+    
+    <main>
+      <div class="toolbar">
+        <button id="prev">← Trang trước</button>
+        <button id="next">Trang sau →</button>
+        <span id="page-info">Đang tải...</span>
+        <label style="margin-left:12px">Zoom
+          <input id="zoom" type="range" min="1" max="2" step="0.05" value="1">
+        </label>
+      </div>
 
-    <div id="flipbook"></div>
-  </main>
+      <div id="flipbook"></div>
+    </main>
+
+    <aside class="sidebar">
+      <h3>Danh sách tài liệu</h3>
+      <ul class="nav-list">
+        <li class="nav-item active" data-url="./handouts/webinstruction.pdf">
+          Hướng Dẫn Web
+        </li>
+        <li class="nav-item" data-url="./handouts/class_organization.pdf">
+          Hướng dẫn thao tác tổ chức lớp học
+        </li>
+      </ul>
+    </aside>
+
+  </div>
 
   <script src="script.js"></script>
 </body>
