--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </label>
       </div>
 
-      <div id="flipbook"></div>
+     <div id="flipbook" style="background: transparent !important; box-shadow: none !important;"></div>
     </main>
 
     <aside class="sidebar">
