--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
-  <link rel='stylesheet' href='https://unpkg.com/luckysheet/dist/plugins/css/pluginsCss.css' />
-  <link rel='stylesheet' href='https://unpkg.com/luckysheet/dist/plugins/plugins.css' />
-  <link rel='stylesheet' href='https://unpkg.com/luckysheet/dist/css/luckysheet.css' />
-  <link rel='stylesheet' href='https://unpkg.com/luckysheet/dist/assets/iconfont/iconfont.css' />
-
-  <script src="https://unpkg.com/luckysheet/dist/plugins/js/plugin.js"></script>
-  <script src="https://unpkg.com/luckysheet/dist/luckysheet.umd.js"></script>
+  <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/luckysheet@2.1.13/dist/plugins/css/pluginsCss.css' />
+  <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/luckysheet@2.1.13/dist/plugins/plugins.css' />
+  <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/luckysheet@2.1.13/dist/css/luckysheet.css' />
+  <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/luckysheet@2.1.13/dist/assets/iconfont/iconfont.css' />
+  
+  <script src="https://cdn.jsdelivr.net/npm/luckysheet@2.1.13/dist/plugins/js/plugin.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/luckysheet@2.1.13/dist/luckysheet.umd.js"></script>
   
   <script src="https://cdn.jsdelivr.net/npm/luckyexcel/dist/luckyexcel.umd.js"></script>
 
@@ -22,10 +22,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.worker.min.js"></script>
   <script>
     window.pdfjsLib = window.pdfjsLib || {};
-    pdfjsLib.GlobalWorkerOptions.workerSrc =
-      "https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.worker.min.js";
+    pdfjsLib.GlobalWorkerOptions.workerSrc = "https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.worker.min.js";
   </script>
-
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/page-flip@2.0.7/dist/css/page-flip.css">
   <script src="https://cdn.jsdelivr.net/npm/page-flip@2.0.7/dist/js/page-flip.browser.min.js"></script>
 </head>
