--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             Hướng Dẫn Web
         </li>
         
-        <li class="nav-item" data-type="excel" data-url="./handouts/curriculum.xlsx">
+        <li class="nav-item" data-type="excel" data-url="handouts/curriculum.xlsx">
             Lộ trình tiếng Trung
         </li>
         
