--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
-  <link rel='stylesheet' href='https://unpkg.com/luckysheet@2.1.13/dist/plugins/css/pluginsCss.css' />
-  <link rel='stylesheet' href='https://unpkg.com/luckysheet@2.1.13/dist/plugins/plugins.css' />
-  <link rel='stylesheet' href='https://unpkg.com/luckysheet@2.1.13/dist/css/luckysheet.css' />
-  <link rel='stylesheet' href='https://unpkg.com/luckysheet@2.1.13/dist/assets/iconfont/iconfont.css' />
+  <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/luckysheet@2.1.12/dist/plugins/css/pluginsCss.css' />
+  <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/luckysheet@2.1.12/dist/plugins/plugins.css' />
+  <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/luckysheet@2.1.12/dist/css/luckysheet.css' />
+  <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/luckysheet@2.1.12/dist/assets/iconfont/iconfont.css' />
   
-  <script src="https://unpkg.com/luckysheet@2.1.13/dist/plugins/js/plugin.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/luckysheet@2.1.12/dist/plugins/js/plugin.js"></script>
   
-  <script src="https://unpkg.com/luckysheet@2.1.13/dist/luckysheet.umd.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/luckysheet@2.1.12/dist/luckysheet.umd.js"></script>
   
   <script src="https://cdn.jsdelivr.net/npm/luckyexcel/dist/luckyexcel.umd.js"></script>
 
