--- a/index.html
+++ b/index.html
@@ -5,19 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Lab Edu Handout Viewer</title>
   <link rel="stylesheet" href="style.css">
-
+  
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
-  <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/luckysheet@2.1.12/dist/plugins/css/pluginsCss.css' />
-  <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/luckysheet@2.1.12/dist/plugins/plugins.css' />
-  <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/luckysheet@2.1.12/dist/css/luckysheet.css' />
-  <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/luckysheet@2.1.12/dist/assets/iconfont/iconfont.css' />
-  
-  <script src="https://cdn.jsdelivr.net/npm/luckysheet@2.1.12/dist/plugins/js/plugin.js"></script>
-  
-  <script src="https://cdn.jsdelivr.net/npm/luckysheet@2.1.12/dist/luckysheet.umd.js"></script>
-  
-  <script src="https://cdn.jsdelivr.net/npm/luckyexcel/dist/luckyexcel.umd.js"></script>
+  <script src="https://cdn.sheetjs.com/xlsx-0.20.1/package/dist/xlsx.full.min.js"></script>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.worker.min.js"></script>
@@ -27,6 +18,27 @@
   </script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/page-flip@2.0.7/dist/css/page-flip.css">
   <script src="https://cdn.jsdelivr.net/npm/page-flip@2.0.7/dist/js/page-flip.browser.min.js"></script>
+
+  <style>
+    /* Làm đẹp bảng tính */
+    #spreadsheet-container table {
+      border-collapse: collapse;
+      width: 100%;
+      background: white;
+    }
+    #spreadsheet-container th, #spreadsheet-container td {
+      border: 1px solid #ccc;
+      padding: 8px;
+      font-size: 14px;
+      color: #333;
+    }
+    /* Tô màu hàng đầu tiên (Tiêu đề) */
+    #spreadsheet-container tr:first-child td {
+      background-color: #f3f3f3;
+      font-weight: bold;
+      text-align: center;
+    }
+  </style>
 </head>
 <body>
   <header><h1>Lab Edu Handout Viewer</h1></header>
